@@ -1,5 +1,5 @@
 driver = {DATABASE_TYPE}
-connect = "host={DATABASE_HOST} dbname={DATABASE_NAME} user={DATABASE_USER} password={DATABASE_PASSWORD}"
+connect = "host={DATABASE_HOST} port={DATABASE_PORT} dbname={DATABASE_NAME} user={DATABASE_USER} password={DATABASE_PASSWORD}"
 default_pass_scheme = PLAIN
 
 # Were we add some extra fields (userdb fields) - needed for userdb prefetch
